[NS] Fixed position on mobile.

--- a/ns/ns.css
+++ b/ns/ns.css
@@ -185,7 +185,7 @@ i, em { font-style: italic }
 
     border: 1px solid #ff7300;
     border-radius: 10px;
-    background: #46101;
+    background: #461010;
 }
 
 .fallback-message p {
